; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/fileio/extr_file_slot.c_slot_delete.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/fileio/extr_file_slot.c_slot_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@MAXPATHLEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"%s/saves/%s__%d.png\00", align 1
@DEFAULT_PATH = common dso_local global i8* null, align 8
@rom_filename = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"%s/saves/%s.gp%d\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"%s/saves/%s.srm\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"MD-%04X.gp%d\00", align 1
@rominfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str.4 = private unnamed_addr constant [12 x i8] c"MD-%04X.srm\00", align 1
@SysArea = common dso_local global i32 0, align 4
@CARD_WORKAREA = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [5 x i8] c"GENP\00", align 1
@.str.6 = private unnamed_addr constant [3 x i8] c"00\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @slot_delete(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* @MAXPATHLEN, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %35, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* %3, align 4
  %16 = icmp sgt i32 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %14
  %18 = load i8*, i8** @DEFAULT_PATH, align 8
  %19 = load i8*, i8** @rom_filename, align 8
  %20 = load i32, i32* %3, align 4
  %21 = sub nsw i32 %20, 1
  %22 = call i32 (i8*, i8*, ...) @sprintf(i8* %11, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %18, i8* %19, i32 %21)
  %23 = call i32 @remove(i8* %11)
  %24 = load i8*, i8** @DEFAULT_PATH, align 8
  %25 = load i8*, i8** @rom_filename, align 8
  %26 = load i32, i32* %3, align 4
  %27 = sub nsw i32 %26, 1
  %28 = call i32 (i8*, i8*, ...) @sprintf(i8* %11, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8* %24, i8* %25, i32 %27)
  br label %33

29:                                               ; preds = %14
  %30 = load i8*, i8** @DEFAULT_PATH, align 8
  %31 = load i8*, i8** @rom_filename, align 8
  %32 = call i32 (i8*, i8*, ...) @sprintf(i8* %11, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i8* %30, i8* %31)
  br label %33

33:                                               ; preds = %29, %17
  %34 = call i32 @remove(i8* %11)
  store i32 %34, i32* %7, align 4
  br label %61

35:                                               ; preds = %2
  %36 = load i32, i32* %3, align 4
  %37 = icmp sgt i32 %36, 0
  br i1 %37, label %38, label %43

38:                                               ; preds = %35
  %39 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rominfo, i32 0, i32 0), align 4
  %40 = load i32, i32* %3, align 4
  %41 = sub nsw i32 %40, 1
  %42 = call i32 (i8*, i8*, ...) @sprintf(i8* %11, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i32 %39, i32 %41)
  br label %46

43:                                               ; preds = %35
  %44 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rominfo, i32 0, i32 0), align 4
  %45 = call i32 (i8*, i8*, ...) @sprintf(i8* %11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i32 %44)
  br label %46

46:                                               ; preds = %43, %38
  %47 = load i32, i32* @CARD_WORKAREA, align 4
  %48 = call i32 @memset(i32* @SysArea, i32 0, i32 %47)
  %49 = call i32 @CARD_Init(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0))
  %50 = load i32, i32* %4, align 4
  %51 = add nsw i32 %50, -1
  store i32 %51, i32* %4, align 4
  %52 = load i32, i32* %4, align 4
  %53 = call i64 @CardMount(i32 %52)
  %54 = icmp ne i64 %53, 0
  br i1 %54, label %55, label %60

55:                                               ; preds = %46
  %56 = load i32, i32* %4, align 4
  %57 = call i32 @CARD_Delete(i32 %56, i8* %11)
  store i32 %57, i32* %7, align 4
  %58 = load i32, i32* %4, align 4
  %59 = call i32 @CARD_Unmount(i32 %58)
  br label %60

60:                                               ; preds = %55, %46
  br label %61

61:                                               ; preds = %60, %33
  %62 = load i32, i32* %7, align 4
  %63 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %63)
  ret i32 %62
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @sprintf(i8*, i8*, ...) #2

declare dso_local i32 @remove(i8*) #2

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @CARD_Init(i8*, i8*) #2

declare dso_local i64 @CardMount(i32) #2

declare dso_local i32 @CARD_Delete(i32, i8*) #2

declare dso_local i32 @CARD_Unmount(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
